--- a/app/views/search/search.html.erb
+++ b/app/views/search/search.html.erb
@@ -9,12 +9,26 @@
 <% end %>
 
 <ul>
-  <% @users.each do |user| %>
-    <li>
-      <h3>
-        <%= link_to user.first_name, controller: "users", action: "show", id: user._id%>
-      </h3>
-    </li>
-  <% end %>
+	<% if @users %>
+	  <ul class="search_results">
+	    <% @users.each do |user| %>
+	      <li>
+	        <h3>
+	          <%= link_to user.try(:highlight).try(:first_name) ?
+	              user.highlight.first_name[0].html_safe : user.first_name,
+	              controller: "users", action: "show", id: user._id %>
+	        </h3>
+	        <% if user.try(:highlight).try(:last_name) %>
+	          <% user.highlight.last_name.each do |snippet| %>
+	          <p><%= snippet.html_safe %>...</p>
+	        <% end %>
+	      <% end %>
+	    </li>
+	  <% end %>
+	</ul>
+	<% else %>
+	  <p>Your search did not match any documents.</p>
+	<% end %>
 </ul>
 <%= link_to 'Users', users_path %>
+
